[gd_scene load_steps=11 format=3 uid="uid://xe8newytmesq"]

[ext_resource type="Script" uid="uid://cxh0vpwmlu2xn" path="res://scenes/player/player.gd" id="1_hqtel"]
[ext_resource type="PackedScene" uid="uid://drgsdi86jvuib" path="res://assets/models/craft_racer.glb" id="2_sweqy"]
[ext_resource type="AudioStream" uid="uid://cnpe2u7wogh8i" path="res://assets/sounds/jet-engine.wav" id="3_2hs0m"]
[ext_resource type="AudioStream" uid="uid://cdno7uci76jup" path="res://assets/sounds/psh.wav" id="4_1jxqw"]
[ext_resource type="Script" uid="uid://c58l1de7dfsth" path="res://scenes/player/player_inventory.gd" id="5_p47bc"]
[ext_resource type="Script" uid="uid://sdre2qo4bcjg" path="res://scenes/player/interaction_manager.gd" id="6_75vfm"]
[ext_resource type="Script" uid="uid://cpg4htgsy71wn" path="res://scenes/player/roles/pilot_controls.gd" id="7_0owmy"]
[ext_resource type="Script" uid="uid://dq4fclgm5oeau" path="res://scenes/player/roles/role_manager.gd" id="8_qek5x"]
[ext_resource type="Script" uid="uid://h8o5p43jc1h0" path="res://scenes/player/systems/interaction.gd" id="9_5gtgg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_d5lh8"]
size = Vector3(1.20041, 0.757954, 2.03442)

[node name="player" type="RigidBody3D"]
gravity_scale = 0.0
script = ExtResource("1_hqtel")

[node name="craft_racer2" parent="." instance=ExtResource("2_sweqy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -0.5, -1.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00169452, -0.122352, -0.0116844)
shape = SubResource("BoxShape3D_d5lh8")

[node name="ThrustLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, -0.25, 1)
light_color = Color(0.476841, 0.644696, 1, 1)
light_energy = 10.264

[node name="ThrustLight2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35, -0.25, 1)
light_color = Color(0.476841, 0.644696, 1, 1)
light_energy = 10.264

[node name="ThrustSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2hs0m")
volume_db = -11.143

[node name="RotationSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1jxqw")
volume_db = -26.0

[node name="cockpit" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.12, -0.5)

[node name="Camera3D" type="Camera3D" parent="cockpit" groups=["MainCamera"]]
current = true

[node name="PlayerInventory" type="Node" parent="."]
script = ExtResource("5_p47bc")

[node name="InteractionManager" type="Node" parent="."]
script = ExtResource("6_75vfm")

[node name="PilotControls" type="Node" parent="."]
script = ExtResource("7_0owmy")

[node name="RoleManager" type="Node" parent="."]
script = ExtResource("8_qek5x")

[node name="Interaction" type="Node" parent="."]
script = ExtResource("9_5gtgg")
